--- a/.github/workflows/issue683.yml
+++ b/.github/workflows/issue683.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   appium-tests:
-    runs-on: [self-hosted, macOS, ARM64]
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v4.1.7
