--- a/.github/workflows/issue683.yml
+++ b/.github/workflows/issue683.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - "main"
       - "develop"
+  workflow_dispatch: # Add this line to enable manual triggering
 
 jobs:
   appium-tests:
