--- a/.github/workflows/issue1137.yml
+++ b/.github/workflows/issue1137.yml
@@ -21,7 +21,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: pnpm/action-setup@v4
+      - name: setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 6.14.5 
+
       - name: setup node.js
         uses: actions/setup-node@v3
         with:
