--- a/.github/workflows/issue1137.yml
+++ b/.github/workflows/issue1137.yml
@@ -32,7 +32,7 @@ jobs:
           node-version: 18
           cache: 'pnpm'
       - name: setup pnpm store config
-        run: pnpm config set store-dir $PNPM_CACHE_FOLDER
+        run: pnpm config set store-dir=$PNPM_CACHE_FOLDER
       - name: install dependencies
         run: pnpm install --frozen-lockfile
       - name: setup npmrc file to configure pnpm
