--- a/.github/workflows/issue1137.yml
+++ b/.github/workflows/issue1137.yml
@@ -25,14 +25,19 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           version: 6.14.5 
-
       - name: setup node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'pnpm'
       - name: setup pnpm store config
-        run: pnpm config set store-dir=$PNPM_CACHE_FOLDER
+        run: pnpm config set store-dir $PNPM_CACHE_FOLDER
+      - name: verify pnpm-lock.yaml presence
+        run: |
+          if [ ! -f pnpm-lock.yaml ]; then
+            echo "Error: pnpm-lock.yaml not found!"
+            exit 1
+          fi
       - name: install dependencies
         run: pnpm install --frozen-lockfile
       - name: setup npmrc file to configure pnpm
