--- a/.github/workflows/issue1137.yml
+++ b/.github/workflows/issue1137.yml
@@ -21,10 +21,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 6.14.5 
+      - uses: pnpm/action-setup@v4
       - name: setup node.js
         uses: actions/setup-node@v3
         with:
@@ -32,12 +29,6 @@ jobs:
           cache: 'pnpm'
       - name: setup pnpm store config
         run: pnpm config set store-dir $PNPM_CACHE_FOLDER
-      - name: verify pnpm-lock.yaml presence
-        run: |
-          if [ ! -f pnpm-lock.yaml ]; then
-            echo "Error: pnpm-lock.yaml not found!"
-            exit 1
-          fi
       - name: install dependencies
         run: pnpm install --frozen-lockfile
       - name: setup npmrc file to configure pnpm
