--- a/.github/workflows/issue1137.yml
+++ b/.github/workflows/issue1137.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: 18
           cache: 'pnpm'
       - name: setup pnpm store config
-        run: pnpm config set store-dir $PNPM_CACHE_FOLDER
+        run: ~/.pnpm/pnpm config set store-dir $PNPM_CACHE_FOLDER
       - name: verify pnpm-lock.yaml presence
         run: |
           if [ ! -f pnpm-lock.yaml ]; then
@@ -39,25 +39,4 @@ jobs:
             exit 1
           fi
       - name: install dependencies
-        run: pnpm install --frozen-lockfile
-      - name: setup npmrc file to configure pnpm
-        run: |
-          cat << EOF > "$HOME/.npmrc"
-            @mycompany:registry=https://npm.pkg.github.com
-            //npm.pkg.github.com/:_authToken=$NPM_PUBLISH_TOKEN
-            //registry.npmjs.org/:_authToken=null
-          EOF
-        env:
-          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
-          HOME: ${{ github.workspace }}
-      - name: create and publish versions
-        uses: changesets/action@v1
-        with:
-          cwd: ${{ github.workspace }}
-          version: pnpm run version
-          commit: "chore: update package versions"
-          title: "Release (Private Packages)"
-          publish: pnpm run publish:ci
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HOME: ${{ github.workspace }}
+        run: ~/.pnpm/pnpm install --frozen-lockfile
