--- a/.github/workflows/issue1137.yml
+++ b/.github/workflows/issue1137.yml
@@ -1,7 +1,6 @@
 name: Release (Private Packages)
 on:
   workflow_dispatch:
-
 jobs:
   version_or_release:
     name: 'Version and open PR (or) release private packages'
@@ -11,22 +10,34 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 6.14.5  # Specify the pnpm version here
+      - uses: pnpm/action-setup@v4
       - name: setup node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'pnpm'
       - name: setup pnpm store config
-        run: ~/.pnpm/pnpm config set store-dir $PNPM_CACHE_FOLDER
-      - name: verify pnpm-lock.yaml presence
-        run: |
-          if [ ! -f pnpm-lock.yaml ]; then
-            echo "Error: pnpm-lock.yaml not found!"
-            exit 1
-          fi
+        run: pnpm config set store-dir $PNPM_CACHE_FOLDER
       - name: install dependencies
-        run: ~/.pnpm/pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
+      - name: setup npmrc file to configure pnpm
+        run: |
+          cat << EOF > "$HOME/.npmrc"
+            @mycompany:registry=https://npm.pkg.github.com
+            //npm.pkg.github.com/:_authToken=$NPM_PUBLISH_TOKEN
+            //registry.npmjs.org/:_authToken=null
+          EOF
+        env:
+          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+          HOME: ${{ github.workspace }}
+      - name: create and publish versions
+        uses: changesets/action@v1
+        with:
+          cwd: ${{ github.workspace }}
+          version: pnpm run version
+          commit: "chore: update package versions"
+          title: "Release (Private Packages)"
+          publish: pnpm run publish:ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HOME: ${{ github.workspace }}
