--- a/.github/workflows/issue1137.yml
+++ b/.github/workflows/issue1137.yml
@@ -11,6 +11,8 @@ jobs:
         with:
           fetch-depth: 0
       - uses: pnpm/action-setup@v4
+        with:
+          version: 6.14.5  # Specify the pnpm version here
       - name: setup node.js
         uses: actions/setup-node@v3
         with:
