--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,5 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Node.js
         uses: mahalakshmi-rekadi/setup-python-test@main
+        with:
+          cache-dependency-path: ${{ github.action_path }}/requirements.txt
