--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Node.js
         uses: mahalakshmi-rekadi/setup-python-test@main
-        with:
-          cache-dependency-path: ${{ github.action_path }}/requirements.txt
+      - name: Install dependencies
+        run: pip install -r ${{ github.action_path }}/requirements.txt
