--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Node.js
         uses: mahalakshmi-rekadi/setup-python-test@main
+      - name: Debug File Paths
+        run: |
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          find $GITHUB_WORKSPACE -type f
      
