--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Set up Node.js
-        uses: mahalakshmi-rekadi/setup-python-test/.github/workflows/actions/composite-actions@main
+        uses: mahalakshmi-rekadi/setup-python-test@main
+        with:
+          path: .github/workflows/actions/composite-actions
+
 
     
      
