--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Node.js
         uses: mahalakshmi-rekadi/setup-python-test@main
+        with:
+          path: .github/workflows/actions/composite-actions
+
        
 
 
